# babylon-contract

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile-arm64  Dockerfile-ci  Dockerfile-x86_64  LICENSE  Makefile  README.md  RELEASE.md  go.work  go.work.sum
.cargo/: config  config.toml
.circleci/: config.yml
.github/workflows/: benchmarking.yml  deploy.yml  local-tests.yml  wasm-tests-full.yml  wasm-tests.yml
artifacts/: babylon_contract.wasm  checksums.txt
bitcoin/: Cargo.toml
bitcoin/src/: lib.rs  merkle.rs  pow.rs
contracts/babylon/: Cargo.toml
contracts/babylon-finality/: Cargo.toml
contracts/babylon-finality/src/: contract.rs  error.rs  finality.rs  msg.rs  queries.rs
contracts/babylon/.cargo/: config.toml
contracts/babylon/benches/: main.rs
contracts/babylon/schema/: babylon-contract.json
contracts/babylon/schema/raw/: execute.json  instantiate.json  query.json  response_to_babylon_checkpoint.json  response_to_babylon_last_epoch.json  response_to_btc_headers.json  response_to_btc_tip_header.json  response_to_config.json  response_to_consumer_header.json  response_to_cz_header.json  response_to_cz_last_height.json  response_to_last_consumer_height.json  response_to_transfer_info.json
contracts/babylon/src/: bindings.rs  contract.rs  error.rs  ibc.rs  lib.rs  multitest.rs
contracts/babylon/src/msg/: btc_header.rs  consumer_header.rs  contract.rs  cz_header.rs  epoch.rs  ibc.rs  mod.rs
contracts/babylon/src/multitest/: suite.rs
contracts/babylon/src/queries/: mod.rs
contracts/babylon/src/state/: babylon_epoch_chain.rs  btc_light_client.rs  config.rs  consumer_header_chain.rs  cz_header_chain.rs  mod.rs
contracts/babylon/src/utils/: babylon_epoch_chain.rs  bitcoin.rs  btc_light_client.rs  btc_light_client_executor.rs  btc_light_client_querier.rs  consumer_header_chain.rs  cosmos_store.rs  cz_header_chain.rs  mod.rs
contracts/babylon/src/utils/ics23_commitment/: error.rs  merkle.rs  specs.rs
contracts/babylon/tests/: integration.rs
contracts/btc-finality/: Cargo.toml
contracts/btc-finality/.cargo/: config.toml
contracts/btc-finality/schema/: btc-finality.json
contracts/btc-finality/schema/raw/: execute.json  instantiate.json  query.json  response_to_activated_height.json  response_to_config.json  response_to_delegations.json  response_to_delegations_by_f_p.json  response_to_finality_provider.json  response_to_finality_providers.json  response_to_params.json
contracts/btc-finality/src/: contract.rs  error.rs  finality.rs  lib.rs  msg.rs  multitest.rs  queries.rs  test_utils.rs
contracts/btc-finality/src/multitest/: suite.rs
contracts/btc-finality/src/state/: config.rs  finality.rs  mod.rs  public_randomness.rs
contracts/btc-finality/tests/: integration.rs
contracts/btc-light-client/: Cargo.toml
contracts/btc-light-client/.cargo/: config.toml
contracts/btc-light-client/benches/: main.rs
contracts/btc-light-client/schema/: btc-light-client.json
contracts/btc-staking/: Cargo.toml
contracts/btc-staking/.cargo/: config.toml
contracts/btc-staking/schema/: btc-staking.json
contracts/btc-staking/schema/raw/: execute.json  instantiate.json  query.json  response_to_all_pending_rewards.json  response_to_block.json  response_to_blocks.json  response_to_config.json  response_to_delegation.json  response_to_delegations.json  response_to_evidence.json  response_to_finality_provider.json  response_to_finality_provider_info.json  response_to_finality_provider_power.json  response_to_finality_providers.json  response_to_finality_providers_by_power.json  response_to_finality_signature.json  response_to_params.json  response_to_pending_rewards.json
contracts/btc-staking/src/: contract.rs  error.rs  finality.rs  fp_index.rs  lib.rs  msg.rs  queries.rs  staking.rs  state.rs  test_utils.rs
contracts/btc-staking/src/state/: config.rs  delegations.rs  finality.rs  fp_index.rs  mod.rs  points_alignment.rs  public_randomness.rs  staking.rs
contracts/btc-staking/src/validation/: mod.rs
contracts/btc-staking/tests/: integration.rs
contracts/op-finality-gadget/: Cargo.toml
contracts/op-finality-gadget/.cargo/: config.toml
contracts/op-finality-gadget/schema/: op-finality-gadget.json
contracts/op-finality-gadget/schema/raw/: execute.json  instantiate.json  query.json  response_to_block_finalized.json  response_to_block_votes.json  response_to_config.json  response_to_first_pub_rand_commit.json  response_to_last_pub_rand_commit.json  response_to_query_block_finalized.json  response_to_query_current_epoch.json  response_to_query_finality_provider.json  response_to_query_finality_provider_current_power.json
contracts/op-finality-gadget/src/: contract.rs  error.rs  finality.rs  ibc.rs  lib.rs  msg.rs  queries.rs  state.rs  utils.rs
contracts/op-finality-gadget/src/exec/: admin.rs  finality.rs  mod.rs
contracts/op-finality-gadget/src/state/: config.rs  finality.rs  public_randomness.rs
contracts/op-finality-gadget/tests/: enabled.rs  forked_blocks.rs  instantiate.rs  integration.rs
datagen/: README.md  btcstaking.go  go.mod  go.sum  main.go
datagen/utils/: btccheckpoint.go  btclightclient.go  btcstaking.go  btctimestamp.go  common.go  eots.go  finality.go
docker/: Dockerfile-arm64  Dockerfile-ci  Dockerfile-x86_64
proto/: Cargo.toml  buf.gen.rust.yaml
proto/src/: lib.rs
proto/testdata/: go.mod  go.sum  main.go
schema/: babylon-contract.json
schema/raw/: instantiate.json  query.json
scripts/: buf-install.sh  build-optimizer-ci.sh  build-optimizer.sh  fix-lint.sh  integration_test.sh  lint.sh  optimizer.sh  precommit.sh  protocgen.sh  schema.sh  set_version.sh  update_changelog.sh
src/: bindings.rs  contract.rs  error.rs  ibc.rs  lib.rs  msg.rs  state.rs
src/msg/: bindings.rs  contract.rs  ibc.rs  mod.rs
src/state/: babylon_epoch_chain.rs  btc_light_client.rs  config.rs  cz_header_chain.rs  mod.rs
src/utils/: babylon_epoch_chain.rs  bitcoin.rs  bls.rs  btc_light_client.rs  cosmos_store.rs  cz_header_chain.rs  mod.rs
testdata/: btc_light_client_fork_msg.json
tests/: integration.rs
(+30 files in other folders)
