[workspace]
members   = ["packages/*", "contracts/*" ]
resolver  = "2"

[workspace.package]
edition       = "2021"
version       = "0.2.0"
license       = "Apache-2.0"
repository    = "https://github.com/babylonchain/babylon-contract"
authors       = ["BabylonChain Inc. <admin@babylonchain.io>"]
publish       = false

[workspace.metadata.scripts]
gen-proto       = "./scripts/protocgen.sh"
gen-data        = "go run datagen/main.go"
gen-schema      = "./scripts/schema.sh"
build-optimizer = "./scripts/build-optimizer.sh"
optimize        = "./scripts/optimizer.sh"
lint            = "./scripts/lint.sh"
integration     = "./scripts/integration_test.sh"

[workspace.dependencies]
babylon-proto     = { path = "./packages/proto" }
babylon-bitcoin   = { path = "./packages/bitcoin" }
babylon-contract  = { path = "./contracts/babylon" }
bitcoin           = "0.29.2"
#bitcoin           = { git = "https://github.com/babylonchain/rust-bitcoin" }
bitvec            = "1"
blst              = "0.3.11"
cosmos-sdk-proto  = { version = "0.18.0", default-features = false, features = ["cosmwasm"] }
cosmwasm-schema   = "1.5.2"
cosmwasm-std      = { version = "1.5.2", features = ["iterator", "ibc3"] }
cw-storage-plus   = "1.2.0"
hex               = "0.4.3"
ics23             = { version = "0.9.0", default-features = false, features = ["host-functions"] }
pbjson            = "0.5"
pbjson-types      = "0.5"
prost             = "0.11"
prost-types       = "0.11"
schemars          = "0.8.3"
serde             = { version = "1.0.103", default-features = false, features = ["derive"] }
sha2              = "0.10.6"
tendermint        = "0.30.0"
tendermint-proto  = "0.30.0"
thiserror         = "1.0.40"

# dev deps
cosmwasm-vm       = { version = "1.5.2", default-features = false, features = ["iterator", "stargate"] }
cw-multi-test     = "0.16.2"
serde_json        = "1.0.96"

[profile.release]
codegen-units     = 1
debug             = false
debug-assertions  = false
lto               = true
panic             = 'abort'
rpath             = false
opt-level         = 3
overflow-checks   = true
incremental       = false
