[workspace]
members   = ["packages/*", "contracts/*" ]
resolver  = "2"

[workspace.package]
edition       = "2021"
version       = "0.6.0-rc.0"
license       = "Apache-2.0"
repository    = "https://github.com/babylonchain/babylon-contract"
authors       = ["BabylonChain Inc. <admin@babylonchain.io>"]
publish       = false

[workspace.metadata.scripts]
gen-proto       = "./scripts/protocgen.sh"
gen-data        = "go run datagen/*.go"
gen-schema      = "./scripts/schema.sh"
build-optimizer = "./scripts/build-optimizer.sh"
optimize        = "./scripts/optimizer.sh"
lint            = "./scripts/lint.sh"
fix-lint        = "./scripts/fix-lint.sh"
integration     = "./scripts/integration_test.sh"

[workspace.dependencies]
babylon-proto        = { path = "./packages/proto" }
babylon-bitcoin      = { path = "./packages/bitcoin" }
babylon-btcstaking   = { path = "./packages/btcstaking" }
babylon-contract     = { path = "./contracts/babylon" }
eots                 = { path = "./packages/eots" }
anyhow               = "1.0.82"
bitcoin              = "0.31.1"
bitvec               = "1"
blst                 = "0.3.11"
cosmos-sdk-proto     = { version = "0.19.0", default-features = false, features = ["cosmwasm"] }
cosmwasm-schema      = "1.5.2"
cosmwasm-std         = { version = "1.5.2", features = ["iterator", "ibc3", "staking"] }
cw2                  = "1.1.2"
cw-controllers       = "1.1.2"
cw-multi-test        = "1.1.0"
cw-storage-plus      = "1.2.0"
cw-utils             = "1.0.3"
derivative           = "2"
hex                  = "0.4.3"
ics23                = { version = "0.9.0", default-features = false, features = ["host-functions"] }
prost                = "0.11.9"
schemars             = "0.8.3"
serde                = { version = "1.0.103", default-features = false, features = ["derive"] }
serde_json           = "1.0"
sha2                 = "0.10.6"
tendermint-proto     = "0.32.2"
thiserror            = "1.0.40"
rust_decimal         = "1.35"
schnorr_fun          = "0.10"
secp256kfun          = { version = "0.10", default-features = false, features = ["libsecp_compat"] }
k256                 = { version = "0.13.1", default-features = false, features = ["schnorr"]}

# dev deps
cosmwasm-vm       = { version = "1.5.2", default-features = false, features = ["iterator", "stargate"] }
assert_matches    = "1"
criterion         = { version = "0.5.0" }
rand              = "0.8.5"
pbjson-types      = "0.5.1"
thousands         = "0.2.0"
cargo_metadata    = "0.18.1"

[profile.release]
codegen-units     = 1
debug             = false
debug-assertions  = false
lto               = true
panic             = 'abort'
rpath             = false
opt-level         = 3
overflow-checks   = true
incremental       = false
