[package]
name = "babylon-bitcoin"
version = "0.0.1"
edition = "2021"
description = "A wrapper of the rust-bitcoin library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.29.2"
# bitcoin = { git = "https://github.com/babylonchain/rust-bitcoin" }
hex = "0.4.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
schemars = "0.8.3"
