[package]
name = "btc-staking"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors = ["BabylonChain Inc. <admin@babylonchain.io>", "Mauro Lacy <mauro@babylonchain.io"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "btcstaking-schema"
path = "src/bin/schema.rs"

[features]
# Add feature "cranelift" to default if you need 32 bit or ARM support
default = []
# Use cranelift backend instead of singlepass. This is required for development on 32 bit or ARM machines.
cranelift = ["cosmwasm-vm/cranelift"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]
library = []

[dependencies]
babylon-apis     = { path = "../../packages/apis" }
babylon-bindings = { path = "../../packages/bindings" }
babylon-contract = { path = "../babylon", features = [ "library" ] }
babylon-proto    = { path = "../../packages/proto" }
bitcoin          = { workspace = true }
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cw2              = { workspace = true }
cw-storage-plus  = { workspace = true }
cw-utils         = { workspace = true }
hex              = { workspace = true }
prost            = { workspace = true }
thiserror        = { workspace = true }

[dev-dependencies]
test-utils        = { path = "../../packages/test-utils" }
babylon-proto     = { path = "../../packages/proto" }
cosmwasm-vm       = { workspace = true }
prost             = { workspace = true }
