[package]
name = "op-finality-gadget"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors = ["BabylonChain Inc. <admin@babylonchain.io>", "Snapchain Inc. <info@snapchain.dev>"]
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "op-finality-gadget-schema"
path = "src/bin/schema.rs"

[features]
library = []

[dependencies]
babylon-apis = { path = "../../packages/apis" }
babylon-merkle   = { path = "../../packages/merkle" }
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cw-controllers   = { workspace = true }
cw-storage-plus  = { workspace = true }
cw-utils         = { workspace = true }
eots             = { path = "../../packages/eots" }
hex              = { workspace = true }
k256             = { workspace = true } 
thiserror        = { workspace = true }
anybuf           = { workspace = true }

[dev-dependencies]
cosmwasm-vm       = { workspace = true }
test-utils        = { path = "../../packages/test-utils" }