[package]
name = "op-finality-gadget"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Babylon Labs, Ltd. <admin@babylonlabs.io>", "Snapchain Inc. <info@snapchain.dev>"]
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[[bin]]
name = "op-finality-gadget-schema"
path = "src/bin/schema.rs"
test = false

[features]
library = []

[dependencies]
babylon-apis = { path = "../../packages/apis" }
babylon-merkle   = { path = "../../packages/merkle" }
babylon-bindings = { path = "../../packages/bindings" }
babylon-bitcoin  = { path = "../../packages/bitcoin" }
babylon-proto    = { path = "../../packages/proto" }
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cw-controllers   = { workspace = true }
cw-storage-plus  = { workspace = true }
cw-utils         = { workspace = true }
eots             = { path = "../../packages/eots" }
hex              = { workspace = true }
k256             = { workspace = true } 
thiserror        = { workspace = true }
prost            = { workspace = true }
anybuf           = { workspace = true }

[dev-dependencies]
babylon-bindings-test  = { path = "../../packages/bindings-test" }
btc-staking            = { path = "../btc-staking", features = [ "library" ] }
cosmwasm-vm       = { workspace = true }
test-utils        = { path = "../../packages/test-utils" }
anyhow           = { workspace = true }
derivative       = { workspace = true }

cw-multi-test          = { workspace = true }